# chatapp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Makefile  README.md  meson-native.txt  meson.build
include/: chat.hpp  client.hpp  server.hpp  socket.hpp  terminal.hpp
src/: chat.cpp  client.cpp  meson.build  server.cpp  socket.cpp  terminal.cpp
tests/: chat_client.cpp  meson.build  test_main.cpp
